--- a/Assignment_03_AIML.ipynb
+++ b/Assignment_03_AIML.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/shivamani01/AIML_Batch_15/blob/main/Assignment_03_AIML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Saidattu08/AIML_Batch_15/blob/main/Assignment_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,8 +17,7 @@
         "id": "126d57d5"
       },
       "source": [
-        "## Implement Alpha-Beta Search Tree using Game Strategy\n",
-        "### G. shivamani"
+        "## Implement Alpha-Beta Search Tree using Game Strategy"
       ]
     },
     {
@@ -37,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "2858d274",
       "metadata": {
         "id": "2858d274"
@@ -53,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "1af90cb7",
       "metadata": {
         "id": "1af90cb7"
@@ -63,8 +62,8 @@
         "class Game:\n",
         "    \"\"\"A game is similar to a problem, but it has a terminal test instead of\n",
         "    a goal test, and a utility for each terminal state. To create a game,\n",
-        "    subclass this class and implement `actions`, `result`, `is_terminal`,\n",
-        "    and `utility`. You will also need to set the .initial attribute to the\n",
+        "    subclass this class and implement actions, result, is_terminal,\n",
+        "    and utility. You will also need to set the .initial attribute to the\n",
         "    initial state; this can be done in the constructor.\"\"\"\n",
         "\n",
         "    def actions(self, state):\n",
@@ -86,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "fc3e467e",
       "metadata": {
         "id": "fc3e467e"
@@ -94,7 +93,7 @@
       "outputs": [],
       "source": [
         "def play_game(game, strategies: dict, verbose=False):\n",
-        "    \"\"\"Play a turn-taking game. `strategies` is a {player_name: function} dict,\n",
+        "    \"\"\"Play a turn-taking game. strategies is a {player_name: function} dict,\n",
         "    where function(state, game) is used to get the player's move.\"\"\"\n",
         "    state = game.initial\n",
         "    while not game.is_terminal(state):\n",
@@ -121,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "41bf6fe8",
       "metadata": {
         "id": "41bf6fe8"
@@ -222,10 +221,10 @@
       "outputs": [],
       "source": [
         "class TicTacToe(Game):\n",
-        "    \"\"\"Play TicTacToe on an `height` by `width` board, needing `k` in a row to win.\n",
+        "    \"\"\"Play TicTacToe on an height by width board, needing k in a row to win.\n",
         "    'X' plays first against 'O'.\"\"\"\n",
         "\n",
-        "    def __init__(self, height=3, width=3, k=3):\n",
+        "    def _init_(self, height=3, width=3, k=3):\n",
         "        self.k = k # k in a row\n",
         "        self.squares = {(x, y) for x in range(width) for y in range(height)}\n",
         "        self.initial = Board(height=height, width=width, to_move='X', utility=0)\n",
@@ -275,8 +274,8 @@
         "    empty = '.'\n",
         "    off = '#'\n",
         "\n",
-        "    def __init__(self, width=8, height=8, to_move=None, **kwds):\n",
-        "        self.__dict__.update(width=width, height=height, to_move=to_move, **kwds)\n",
+        "    def _init_(self, width=8, height=8, to_move=None, **kwds):\n",
+        "        self._dict_.update(width=width, height=height, to_move=to_move, **kwds)\n",
         "\n",
         "    def new(self, changes: dict, **kwds) -> 'Board':\n",
         "        \"Given a dict of {(x, y): contents} changes, return a new Board with the changes.\"\n",
@@ -285,24 +284,24 @@
         "        board.update(changes)\n",
         "        return board\n",
         "\n",
-        "    def __missing__(self, loc):\n",
+        "    def _missing_(self, loc):\n",
         "        x, y = loc\n",
         "        if 0 <= x < self.width and 0 <= y < self.height:\n",
         "            return self.empty\n",
         "        else:\n",
         "            return self.off\n",
         "\n",
-        "    def __hash__(self):\n",
+        "    def _hash_(self):\n",
         "        return hash(tuple(sorted(self.items()))) + hash(self.to_move)\n",
         "\n",
-        "    def __repr__(self):\n",
+        "    def _repr_(self):\n",
         "        def row(y): return ' '.join(self[x, y] for x in range(self.width))\n",
         "        return '\\n'.join(map(row, range(self.height))) +  '\\n'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "49e7b830",
       "metadata": {
         "id": "49e7b830"
@@ -328,28 +327,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "f3558295",
       "metadata": {
         "scrolled": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
         "id": "f3558295",
-        "outputId": "65dab020-1a1e-4991-a089-e5f6d5d5762a"
+        "outputId": "cfec64cd-aff3-44fb-a73b-07cd8a0c115a"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'TicTacToe' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-4c992a02cc18>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplay_game\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTicTacToe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrandom_player\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mO\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphabeta_search\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'TicTacToe' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Player X move: (1, 0)\n",
+            ". X .\n",
+            ". . .\n",
+            ". . .\n",
+            "\n",
+            "Player O move: (1, 2)\n",
+            ". X .\n",
+            ". . .\n",
+            ". O .\n",
+            "\n",
+            "Player X move: (1, 1)\n",
+            ". X .\n",
+            ". X .\n",
+            ". O .\n",
+            "\n",
+            "Player O move: (0, 0)\n",
+            "O X .\n",
+            ". X .\n",
+            ". O .\n",
+            "\n",
+            "Player X move: (0, 1)\n",
+            "O X .\n",
+            "X X .\n",
+            ". O .\n",
+            "\n",
+            "Player O move: (2, 1)\n",
+            "O X .\n",
+            "X X O\n",
+            ". O .\n",
+            "\n",
+            "Player X move: (0, 2)\n",
+            "O X .\n",
+            "X X O\n",
+            "X O .\n",
+            "\n",
+            "Player O move: (2, 0)\n",
+            "O X O\n",
+            "X X O\n",
+            "X O .\n",
+            "\n",
+            "Player X move: (2, 2)\n",
+            "O X O\n",
+            "X X O\n",
+            "X O X\n",
+            "\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -358,27 +403,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "80d941f6",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
         "id": "80d941f6",
-        "outputId": "cfcda554-5645-48f4-e926-717a9d51b74d"
+        "outputId": "07406867-beae-43bc-9917-919c5fe29800"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'TicTacToe' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-a96229f34753>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplay_game\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTicTacToe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphabeta_search\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mO\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminimax_search\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'TicTacToe' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Player X move: (0, 1)\n",
+            ". . .\n",
+            "X . .\n",
+            ". . .\n",
+            "\n",
+            "Player O move: (2, 1)\n",
+            ". . .\n",
+            "X . O\n",
+            ". . .\n",
+            "\n",
+            "Player X move: (1, 2)\n",
+            ". . .\n",
+            "X . O\n",
+            ". X .\n",
+            "\n",
+            "Player O move: (0, 0)\n",
+            "O . .\n",
+            "X . O\n",
+            ". X .\n",
+            "\n",
+            "Player X move: (1, 1)\n",
+            "O . .\n",
+            "X X O\n",
+            ". X .\n",
+            "\n",
+            "Player O move: (1, 0)\n",
+            "O O .\n",
+            "X X O\n",
+            ". X .\n",
+            "\n",
+            "Player X move: (2, 0)\n",
+            "O O X\n",
+            "X X O\n",
+            ". X .\n",
+            "\n",
+            "Player O move: (0, 2)\n",
+            "O O X\n",
+            "X X O\n",
+            "O X .\n",
+            "\n",
+            "Player X move: (2, 2)\n",
+            "O O X\n",
+            "X X O\n",
+            "O X X\n",
+            "\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
